# tts-service

./: .gitignore  pyproject.toml
app/: audio.py  config.py  main.py  metrics.py  schemas.py  tts_engine.py
