[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-service"
version = "0.1.0"
description = "FastAPI TTS streaming service powered by ResembleAI Chatterbox"
authors = [{name = "LiveKit TTS", email = "admin@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.24.0",
    "torch>=2.1.1",
    "torchaudio>=2.1.1",
    "numpy>=1.26.0",
    "prometheus-client>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.2.1",
    "chatterbox-tts>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["app"]
